# io-gen

./: .gitignore  CLAUDE.md  Makefile  README.md  code_review.html  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
archive/docs/: DEVEL.md
archive/tests/: test_emit_xdc.py
docs/: DEVEL.md  README.md  bank_table.md  buffers.md  cli.md  code_review.md  constraints_table.md  conventions.md  devlog.md  generation.md  io-gen.md  meta_table.md  pin_table.md  pipeline.md  schema.md  signal_table.md  table_construction.md  todo.md  validation.md
examples/: README.md  arty-z7-20.yaml  example.v  example.vhd  example.xdc  example.yaml  example_io.v  example_io.vhd
io_gen/: __init__.py  checks.py  cli.py  emit_vhdl.py  emit_xdc.py  exceptions.py  identifiers.py  pipeline.py  validate.py
io_gen/generate/: __init__.py  common.py  formatting.py  verilog.py  verilog_ioring.py  verilog_top.py  vhdl_ioring.py  vhdl_top.py  xdc.py
io_gen/models/: __init__.py  common.py  pin.py  signal.py
schema/: schema.json
tests/: test_checks.py  test_cli.py  test_common.py  test_constraints_table.py  test_emit_vhdl.py  test_emit_xdc.py  test_flatten.py  test_identifiers.py  test_meta_table.py  test_pin_table.py  test_pipeline.py  test_signal_table.py  test_validate.py  test_validate_verilog.py  test_validate_vhdl.py  test_verilog.py  test_verilog_ioring.py  test_verilog_top.py  test_vhdl_ioring.py  test_vhdl_top.py  test_xdc.py
validation/: .gitignore  Basys3_Master.xdc  Makefile  basys3.yaml  run_drc  run_drc.tcl  run_synth.tcl
(+49 files in other folders)
