[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "io-gen"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
	"pyyaml>=6.0",
	"jsonschema>=4.18,<5.0",
	"referencing>=0.30.0,<1.0",
]

[project.scripts]
io-gen = "io_gen.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"io_gen.schema" = ["*.json"]
"io_gen.schema.defs" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["archive"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

